--- a/sort_number_array/index.html
+++ b/sort_number_array/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>    
+<body style="text-align: center;"> 
 
     <p id="princ_value"></p>
     <p id="order_value"></p>
