--- a/random/index.html
+++ b/random/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta http-equiv="refresh" content="2">
 </head>
 <body>
     <input type="text" id="age" value="12">
-    <button onclick="RandomFc();">check age</button>
+    <button onclick="checkCD();">check age</button>
     <p id="msg"></p>
 
     <script src="./script.js"></script>
 </body>
 </html>
+
